YMLs/redis-loadbalancer.yml
# redis-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-external
spec:
  type: LoadBalancer
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
